zien24_implementation/org/objects/CPQB__Renewal_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>CPQB__Source_Field__c</fullName>
        <label>Source Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQB__Source_Object__c</fullName>
        <label>Source Object</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                    <default>true</default>
                    <label>Opportunity</label>
                </value>
                <value>
                    <fullName>Opportunity Product</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Order Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQB__Target_Field__c</fullName>
        <label>Target Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQB__Target_Object__c</fullName>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                    <default>true</default>
                    <label>Opportunity</label>
                </value>
                <value>
                    <fullName>Opportunity Product</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Order Product</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQB__Target_Value__c</fullName>
        <inlineHelpText>Use this field if you want to set a hard value in the target field. This only works when the &apos;Source Field&apos; is empty.</inlineHelpText>
        <label>Target Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Renewal Mapping</label>
    <pluralLabel>Renewal Mappings</pluralLabel>
</CustomObject>